--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glowing plant</title>
+    <title>FLEURS BY YANIS</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" type="text/javascript"></script><title>Flowers</title>
 </head>
